[tool.poetry]
name = "geoai for detection urban recreational spaces"
version = "0.1.0"
description = "spatial context aware NN"
authors = ["Anna Buch"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xarray = "^2024.10.0"
omegaconf = "^2.3.0"
pydantic = "^2.9.2"
ipytest = "^0.14.2"
sentinelhub = "^3.11.1"
rasterstats = "^0.20.0"
tifffile = "^2024.9.20"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
